change spanish leng and fix button collapse

--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -23,7 +23,16 @@
 }
 
 .buttonStyleGet:hover {
-  color: #fff;
+  color: var(--primary-color);
   background-color: var(--secondary-color);
   border: 2px solid var(--secondary-color);
+}
+
+.buttonCollapse{
+  background-color: var(--bg-color);
+  border: 1.5px solid var(--primary-color);
+}
+
+.buttonCollIcon{
+  color: var(--secondary-color);
 }
